--- a/aboutus.html
+++ b/aboutus.html
@@ -17,6 +17,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+           <a class="navbar-brand mr-auto" href="./index.html">Ristorante Con Fusion</a>
+           <div class="collapse navbar-collapse" id="Navbar">
+              <ul class="navbar-nav mr-auto">
+                    <li class="nav-item "><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="./aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+              </ul>
+            </div>
+        </div>
+    </nav>
 
     <header class="jumbotron">
         <div class="container">
@@ -32,12 +48,14 @@
     </header>
 
     <div class ='container'>
-        <div>
+        <div class='col-12 breadcrumb row-header'>
+            <li class='breadcrumb-item'><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" >About US</li>
+        </div>
             <div>
                <h3>About Us</h3>
                <hr>
             </div>
-        </div>
 
         <div class= 'row row-content'>
             <div class = 'col-12 col-sm-6'>
