--- a/contactus.html
+++ b/contactus.html
@@ -93,7 +93,60 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form>
+                    <div class='row form-group'>
+                        <label for='firstname' class='col-md-2 col-form-label'>First Name</label>
+                        <div class='col-md-10'>
+                            <input class='form-control'id='firstname' type=text name='firstname' placeholder="First Name">
+                        </div>
+                        <label for='lastname' class='col-md-2 col-form-label'>Last Name</label>
+                        <div class='col-md-10'>
+                            <input class='form-control'id='lastname' type=text name='lastname' placeholder="Last Name">
+                        </div>
+                    </div>
+                    <div class='row form-group'>
+                        <label for='tel' class=' col-12 col-md-2 col-form-label'>Telephone No.</label>
+                        <div class=' col-5 col-md-3'>
+                            <input class='form-control'id='tel' type=number name='countrycode' placeholder="+00">
+                        </div>
+                        <div class=' col-7 col-md-7'>
+                            <input class='form-control'id='tel' type=tel name='number' placeholder="8888888888">
+                        </div>
+                    </div>
+                    <div class='row form-group'>
+                        <label for='email' class='col-md-2 col-form-label'>Email</label>
+                        <div class='col-md-10'>
+                            <input class='form-control'id='email' type=mail name='email' placeholder="abc@example.com">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check"style='padding-top:10px' >
+                                <input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
+                                <label class="form-check-label" for="approve" >
+                                    <strong>May we contact you?</strong>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <div class ='form-group row'>
+                        <div class=offset-md-10>
+                            <button  type=sumbit class='btn btn-primary '>Send FeedBack</button>
+                        </div>
+                    </div>
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
