--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ nnpm install font-awesome@4.7.0 --save<!DOCTYPE html>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-           <a class="navbar-brand mr-auto" href="./index.html">Ristorante Con Fusion</a>
+           <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
            <div class="collapse navbar-collapse" id="Navbar">
               <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li><!--fa-lg class for to icons large-->
@@ -42,7 +42,8 @@ nnpm install font-awesome@4.7.0 --save<!DOCTYPE html>
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class='col-12 col-sm'>
+                <div class="col-12 col-sm align-self-center d-flex justify-content-center">
+                    <img src="./img/logo.png" class='img-fluid bg-light'>
                 </div>
             </div>
         </div>
@@ -54,8 +55,14 @@ nnpm install font-awesome@4.7.0 --save<!DOCTYPE html>
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div  class='col col-sm col-md order-sm-first'>
-                <h2>Uthappizza</h2>
-                <p class = '.d-none .d-sm-block'>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class='media'>
+                    <img src="./img/uthappizza.png" class="d-flex mr-3 img-thumbnail align-self-center " alt="Uthappizza">
+                    <div class='media-body'>
+                        <h2>Uthappizza</h2>
+                <p class = 'd-none d-sm-block'>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
@@ -66,7 +73,7 @@ nnpm install font-awesome@4.7.0 --save<!DOCTYPE html>
             </div>
             <div class='col col-sm col-md'>
                 <h2>Weekend Grand Buffet</h2>
-                <p class = '.d-none .d-sm-block'>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <p class = 'd-none d-sm-block'>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
         </div>
 
@@ -75,9 +82,16 @@ nnpm install font-awesome@4.7.0 --save<!DOCTYPE html>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class='col col-sm col-md order-sm-first'>
-                <h2>Alberto Somayya</h2>
+                <div class='media'>
+                    <img src='./img/Portrait-Charles-Coulombeau-Head-Chef-at-Gravetye-Manor.jpg' height=105px width="105px" class='d-flex mr-3 img-thumbnail algin-self-center' alt='Alberto the Head Chef'>
+                    <div class='media-body'>
+                        <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
-                <p class = '.d-none .d-sm-block'>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <p class = 'd-none d-sm-block'>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
