--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="form-group row">
                             <label for="radio" class="col-sm-2 col-form-label">Section: </label>
-                            <div class="btn-group col-sm-5">
+                            <div class="btn-group col-sm-5" data-toggle="buttons">
                                 <label class="btn btn-success active">
                                 <input type="radio" name="options" id="option1" autocomplete="off" checked class='custom-control-input'> Non-Smoking
                                 </label>
@@ -120,9 +120,9 @@
                             </div>
                         </div>
                         <div class ='form-group row'>
-                            <div class='offset-5 offset-md-6'>
-                                <button  type=sumbit class='btn btn-primary btn-sm ml-auto '>Reserve</button>
+                            <div class='offset-5 offset-md-6' data-toggle="buttons">
                                 <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button  type=sumbit class='btn btn-primary btn-sm ml-auto '>Reserve</button>
                             </div>
                             </div>
                     </form>
@@ -199,6 +199,10 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
+                        <div class='btn-grp' id='carousel-buttons'>
+                            <button class='btn btn-sm btn-danger' id='carousel-pause'><span class='fa fa-pause'></span></button>
+                            <button class='btn btn-sm btn-danger' id='carousel-play'><span class='fa fa-play'></span></button>
+                        </div>
                     </div>
                 </div>  
             </div>
@@ -305,11 +309,17 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- <script>
+<script>
     $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
+        $('#mycarousel').carousel({interval:2000});
+        $('#carousel-pause').click(function(){
+            $('#mycarousel').carousel('pause')
+        });
+        $('#carousel-play').click(function(){
+            $('#mycarousel').carousel('cycle')
+        });
 
     });
 
-</script> -->
+</script>
 </html>
