--- a/contactus.html
+++ b/contactus.html
@@ -201,6 +201,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="JS/scripts.js" type='text/javascript'></script>
 </body>
 
 </html>
